# liposome-detect

./: .gitignore  CLAUDE.md  README.md  alpha_recovery.py  calibrate.py  detection_bias.py  pyproject.toml  recall_vs_diameter.py  uncertainty_calibration.py  weighted_deming.py  weighted_deming_boot.py  york_test.py
configs/calibration/: batch1_egfp.yaml  batch2_endophilin.yaml  joint_all_samples.yaml  joint_smoke.yaml  smoke_single.yaml
configs/generator/: alpha_0p50.yaml  alpha_1p00.yaml  alpha_1p50.yaml  alpha_2p00.yaml  diag_train.yaml  diag_val.yaml  smoke.yaml  train_full.yaml  train_v1.yaml  val_full.yaml
configs/train/: hrnet_diagnostic.yaml  hrnet_v1.yaml  smoke.yaml
deliverables/2026-06-12_progress-update/: baselines.md  make_figures.py  progress_update.md
docs/decisions/: 2026-06-03_calibration-findings.md  2026-06-03_calibration-study-design.md  2026-06-04_protein-channel-parameterization.md  2026-06-04_synthetic-generation-strategy.md  2026-06-10_benchmark-design.md  (+2 more)
presentation/: build_pptx.py
scripts/: _resolve_python.sh  run_all_calibration_studies.sh  run_diagnostic.sh
src/: __init__.py  provenance.py
tests/: conftest.py  test_alpha_fit.py  test_compute_stats.py  test_decode_schema.py  test_diagnostic.py  test_discrepancy.py  test_early_stop_metric.py  test_engine_schedule.py  test_generator_alpha_modes.py  test_generator_noise_split.py  test_generator_ranges.py  test_generator_serialization.py  test_generator_size_distribution.py  test_loss_heatmap_sizeweight.py  test_loss_intensity_nll.py  test_models_forward.py  test_models_interface.py
(+107 files in other folders)
